--- a/bower.json
+++ b/bower.json
@@ -32,19 +32,20 @@
     "package.json"
   ],
   "devDependencies": {
-    "seajs": "~2.3.0"
+    "seajs": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/seajs.git#~2.3.0"
   },
   "dependencies": {
-    "bootstrap": "~3.3.4",
-    "angular": "~1.3.15",
-    "angular-bootstrap": "~0.12.1",
-    "angular-ui-codemirror": "~0.2.3",
-    "codemirror": "~4.8.0",
-    "marked": "git://github.com/chjj/marked.git#master",
-    "hotbox": "~1.0.2",
-    "color-picker": "~1.0.2",
-    "kity": "^2.0.5",
-    "json-diff": "*"
+    "bootstrap": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/bootstrap.git#~3.3.4",
+    "angular": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/bower-angular.git#~1.4.7",
+    "angular-bootstrap": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/angular-bootstrap.git#~0.12.1",
+    "angular-ui-codemirror": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/angular-ui-codemirror.git#~0.2.3",
+    "codemirror": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/codemirror.git#~4.8.0",
+    "marked": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/marked.git#master",
+    "hotbox": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/hotbox.git#~1.0.2",
+    "color-picker": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/color-picker.git#~1.0.2",
+    "kity": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/kity.git#^2.0.5",
+    "json-diff": "*",
+    "jquery": "git@e.coding.net:nh6j2b-t8w3y-a1c5k-z4e9f/toolkit/jquery-dist.git#1.9.1"
   },
   "overrides": {
     "codemirror": {
